--- a/app/vviews/ecommerce/elements/header.ejs
+++ b/app/vviews/ecommerce/elements/header.ejs
@@ -53,8 +53,8 @@
       <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
         <span class="user-menu d-block d-lg-none"><i class="anm anm-user-al" aria-hidden="true"></i></span>
         <ul class="customer-links list-inline">
-          <li><a href="">Đăng Nhập</a></li>
-          <li><a href="">Đăng Ký</a></li>
+          <li><a href="/dang-nhap">Đăng Nhập</a></li>
+          <li><a href="/dang-ky">Đăng Ký</a></li>
           <!-- <li><a href="">Wishlist</a></li> -->
         </ul>
       </div>
@@ -68,9 +68,9 @@
     <div class="row align-items-center">
       <!--Desktop Logo-->
       <div class="logo col-md-2 col-lg-2 d-none d-lg-block">
-        <a href="">
-          <img src="frontend/assets/images/logo.svg" alt="Belle Multipurpose Html Template"
-            title="Belle Multipurpose Html Template" />
+        <a href="/">
+          <img src="/frontend/assets/images/logo.svg" alt="Belle"
+            title="Belle" />
         </a>
       </div>
       <!--End Desktop Logo-->
@@ -85,10 +85,10 @@
         <nav class="grid__item" id="AccessibleNav">
           <!-- for mobile -->
           <ul id="siteNav" class="site-nav medium center hidearrow">
-            <li class="lvl1 parent megamenu"><a href="#">Trang Chủ <i class="anm anm-angle-down-l"></i></a>
+            <li class="lvl1 parent megamenu"><a href="/">Trang Chủ <i class="anm anm-angle-down-l"></i></a>
             </li>
             </li>
-            <li class="lvl1 parent megamenu"><a href="#">Sản Phẩm <i class="anm anm-angle-down-l"></i></a>
+            <li class="lvl1 parent megamenu"><a href="/tat-ca-san-pham">Sản Phẩm <i class="anm anm-angle-down-l"></i></a>
             </li>
             <li class="lvl1 parent dropdown"><a href="#">Danh Mục<i class="anm anm-angle-down-l"></i></a>
               <ul class="dropdown">
@@ -137,7 +137,7 @@
       <!--Mobile Logo-->
       <div class="col-6 col-sm-6 col-md-6 col-lg-2 d-block d-lg-none mobile-logo">
         <div class="logo">
-          <a href="index.html">
+          <a href="/">
             <img src="frontend/assets/images/logo.svg" alt="Belle Multipurpose Html Template"
               title="Belle Multipurpose Html Template" />
           </a>
@@ -234,7 +234,7 @@
 <div class="mobile-nav-wrapper" role="navigation">
   <div class="closemobileMenu"><i class="icon anm anm-times-l pull-right"></i> Close Menu</div>
   <ul id="MobileNav" class="mobile-nav">
-    <li class="lvl1 parent megamenu"><a href="index.html">Home <i class="anm anm-plus-l"></i></a>
+    <li class="lvl1 parent megamenu"><a href="/">Home <i class="anm anm-plus-l"></i></a>
       <ul>
         <li><a href="#" class="site-nav">Home Group 1<i class="anm anm-plus-l"></i></a>
           <ul>
