--- a/app/vviews/ecommerce/elements/slider.ejs
+++ b/app/vviews/ecommerce/elements/slider.ejs
@@ -17,7 +17,9 @@
                                         <h2 class="h1 mega-title slideshow__title">BỘ SƯU TẬP MỚI</h2>
                                         <span class="mega-subtitle slideshow__subtitle"><%- listSliders[1].description %>
                                         </span>
-                                        <span class="btn">Shop now</span>
+                                        <a href="/tat-ca-san-pham" class="button">
+                                            <span class="btn">Shop now</span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -35,7 +37,9 @@
                                     <div class="wrap-caption center">
                                         <h2 class="h1 mega-title slideshow__title">THỜI TRANG &amp; TRÌNH DIỄN</h2>
                                         <span class="mega-subtitle slideshow__subtitle"><%- listSliders[0].description %></span>
-                                        <span class="btn">Shop now</span>
+                                        <a href="/tat-ca-san-pham" class="button">
+                                            <span class="btn">Shop now</span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
