--- a/app/vviews/ecommerce/pages/contact/index.ejs
+++ b/app/vviews/ecommerce/pages/contact/index.ejs
@@ -3,7 +3,7 @@
     	<!--Page Title-->
     	<div class="page section-header text-center">
 			<div class="page-title">
-        		<div class="wrapper"><h1 class="page-width">Contact Us</h1></div>
+        		<div class="wrapper"><h1 class="page-width">Liên Hệ Với Chúng Tôi</h1></div>
       		</div>
 		</div>
         <!--End Page Title-->
@@ -13,12 +13,7 @@
             	<div class="row">
                 	<div class="map-section__overlay-wrapper">
                         <div class="map-section__overlay">
-                            <h3 class="h4">Our store</h3>
-                            <div class="rte-setting">
-                                <p>123 Fake St.<br>Toronto, Canada</p>
-                                <p>Mon - Fri, 10am - 9pm<br>Saturday, 11am - 9pm<br>Sunday, 11am - 5pm</p>
-                            </div>
-                            <p><a href="https://www.google.com/maps/dir/10.8574667,106.7516549/19+%C4%90%C6%B0%E1%BB%9Dng+s%E1%BB%91+14,+Linh+Dong,+Th%E1%BB%A7+%C4%90%E1%BB%A9c,+Ho+Chi+Minh+City/@10.8534205,106.7157777,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x31752795bb58b8e7:0x6041d18e429beb50!2m2!1d106.7507973!2d10.8534225" class="btn btn--secondary btn--small" target="_blank">Get directions</a></p>
+                            <p><a href="https://goo.gl/maps/xG7iKiCH3QrZZW2j7" class="btn btn--secondary btn--small" target="_blank">Chỉ Đường</a></p>
                         </div>
                    	</div>
                 </div>
@@ -26,21 +21,22 @@
         </div>
         <div class="bredcrumbWrap">
             <div class="container breadcrumbs">
-                <a href="" title="Back to the home page">Home</a><span aria-hidden="true">›</span><span>Contact Us</span>
+                <a href="/" title="Back to the home page">Trang Chủ</a><span aria-hidden="true">›</span>
+                <a href="/lien-he">Liên Hệ</a>
             </div>
         </div>
         
         <div class="container">
             <div class="row">
             	<div class="col-12 col-sm-12 col-md-8 col-lg-8 mb-4">
-                	<h2>Drop Us A Line</h2>
-                    <p>Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500 </p>
+                	<h2>Liên Hệ Với Chúng Tôi Bên Dưới</h2>
+                    <!-- <p>Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500 </p> -->
                 	<div class="formFeilds contact-form form-vertical">
-                      <form action="http://annimexweb.com/items/belle/assets/php/mail.php" method="post"  id="contact_form" class="contact-form">	
+                      <form action="" method="post"  id="contact_form" class="contact-form">	
                       <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                         	<div class="form-group">
-                          	<input type="text" id="ContactFormName" name="name" placeholder="Name" value="" required="">
+                          	<input type="text" id="ContactFormName" name="name" placeholder="Họ Tên" value="" required="">
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
@@ -52,25 +48,25 @@
                       <div class="row">
                           <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                           	<div class="form-group">
-                            <input required="" type="tel" id="ContactFormPhone" name="phone" pattern="[0-9\-]*" placeholder="Phone Number" value="">
+                            <input required="" type="tel" id="ContactFormPhone" name="phone" pattern="[0-9\-]*" placeholder="Số Điện Thoại" value="">
                             </div>
                           </div>
                           <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                           	<div class="form-group">
-                            <input required="" type="text" id="ContactSubject" name="subject" placeholder="Subject" value="">
+                            <input required="" type="text" id="ContactSubject" name="subject" placeholder="Tiêu Đề" value="">
                             </div>
                           </div>
                       </div>
                       <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                         	<div class="form-group">
-                            <textarea required="" rows="10" id="ContactFormMessage" name="message" placeholder="Your Message"></textarea>
+                            <textarea required="" rows="10" id="ContactFormMessage" name="message" placeholder="Lời Nhắn Của Bạn"></textarea>
                             </div>
                         </div>  
                       </div>
                       <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <input type="submit" class="btn" value="Send Message">
+                            <input type="submit" class="btn" value="Gửi">
                         </div>
                      </div>
                      </form>
@@ -78,25 +74,37 @@
                 </div>
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4">
                 	<div class="open-hours">
-                    	<strong>Opening Hours</strong><br>
-						Mon - Sat : 9am - 11pm<br>
-						Sunday: 11am - 5pm
+                    	<strong>Giờ Mở Cửa</strong><br>
+						Thứ 2 - Thứ 7 : 9am - 10pm<br>
+						Chủ Nhật: 11am - 5pm
                     </div>
                 	<hr />
                     <ul class="addressFooter">
-                        <li><i class="icon anm anm-map-marker-al"></i><p>55 Gallaxy Enque, 2568 steet, 23568 NY</p></li>
-                        <li class="phone"><i class="icon anm anm-phone-s"></i><p>(440) 000 000 0000</p></li>
-                        <li class="email"><i class="icon anm anm-envelope-l"></i><p>sales@yousite.com</p></li>
+                        <a href="https://goo.gl/maps/xG7iKiCH3QrZZW2j7"target="_blank">
+                        <li><i class="icon anm anm-map-marker-al"></i><p>
+                            <%= item.address %>
+                        </p></li>
+                        </a>
+                        <a href="tel:0362234331"target="_blank">
+                        <li><i class="icon anm anm-map-marker-al"></i><p>
+                            <%= item.phoneHeader %>
+                        </p></li>
+                        </a>
+                        <a href="mailto:huudanh2001.hd@gmail.com"target="_blank">
+                            <li><i class="icon anm anm-map-marker-al"></i><p>
+                            <%= item.email %>
+                        </p></li>
+                        </a>
                     </ul>
                     <hr />
                     <ul class="list--inline site-footer__social-icons social-icons">
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Facebook"><i class="icon icon-facebook"></i></a></li>
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Twitter"><i class="icon icon-twitter"></i> <span class="icon__fallback-text">Twitter</span></a></li>
+                        <li><a class="social-icons__link" href="<%= item.linkfacebook %>" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Facebook"><i class="icon icon-facebook"></i></a></li>
+                        <li><a class="social-icons__link" href="<%= item.linkyoutube %>" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on YouTube"><i class="icon icon-youtube"></i> <span class="icon__fallback-text">YouTube</span></a></li>
+                        <!-- <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Twitter"><i class="icon icon-twitter"></i> <span class="icon__fallback-text">Twitter</span></a></li>
                         <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Pinterest"><i class="icon icon-pinterest"></i> <span class="icon__fallback-text">Pinterest</span></a></li>
                         <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Instagram"><i class="icon icon-instagram"></i> <span class="icon__fallback-text">Instagram</span></a></li>
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Tumblr"><i class="icon icon-tumblr-alt"></i> <span class="icon__fallback-text">Tumblr</span></a></li>
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on YouTube"><i class="icon icon-youtube"></i> <span class="icon__fallback-text">YouTube</span></a></li>
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Vimeo"><i class="icon icon-vimeo-alt"></i> <span class="icon__fallback-text">Vimeo</span></a></li>
+                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Tumblr"><i class="icon icon-tumblr-alt"></i> <span class="icon__fallback-text">Tumblr</span></a></li> -->
+                        <!-- <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Vimeo"><i class="icon icon-vimeo-alt"></i> <span class="icon__fallback-text">Vimeo</span></a></li> -->
                     </ul>
                 </div>
             </div>
