--- a/app/vviews/ecommerce/elements/newArrivals.ejs
+++ b/app/vviews/ecommerce/elements/newArrivals.ejs
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="section-header text-center">
-                    <h2 class="h2">New Arrivals</h2>
-                    <p>Grab these new items before they are gone!</p>
+                    <h2 class="h2">MẪU MỚI VỀ</h2>
+                    <p>Số Lượng Có Hạn</p>
                 </div>
             </div>
         </div>
@@ -494,7 +494,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                    <a href="shop-left-sidebar.html" class="btn">View all</a>
+                    <a href="/tat-ca-san-pham" class="btn">XEM THÊM</a>
                 </div>
             </div>
         </div>
