--- a/app/vviews/ecommerce/pages/about/index.ejs
+++ b/app/vviews/ecommerce/pages/about/index.ejs
@@ -3,7 +3,7 @@
     	<!--Page Title-->
     	<div class="page section-header text-center">
 			<div class="page-title">
-        		<div class="wrapper"><h1 class="page-width">About Us</h1></div>
+        		<div class="wrapper"><h1 class="page-width">Giới Thiệu</h1></div>
       		</div>
 		</div>
         <!--End Page Title-->
@@ -43,21 +43,28 @@
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p></div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                	<h2 class="h2">Contact Us</h2>
+                	<h2 class="h2">Liên Hệ</h2>
                     <ul class="addressFooter">
-                        <li><i class="icon anm anm-map-marker-al"></i><p>55 Gallaxy Enque, 2568 steet, 23568 NY</p></li>
-                        <li class="phone"><i class="icon anm anm-phone-s"></i><p>(440) 000 000 0000</p></li>
-                        <li class="email"><i class="icon anm anm-envelope-l"></i><p>sales@yousite.com</p></li>
+                        <a href="https://goo.gl/maps/xG7iKiCH3QrZZW2j7"target="_blank">
+                        <li><i class="icon anm anm-map-marker-al"></i><p>
+                            <%= item.address %>
+                        </p></li>
+                        </a>
+                        <a href="tel:0362234331"target="_blank">
+                        <li><i class="icon anm anm-map-marker-al"></i><p>
+                            <%= item.phoneHeader %>
+                        </p></li>
+                        </a>
+                        <a href="mailto:huudanh2001.hd@gmail.com"target="_blank">
+                            <li><i class="icon anm anm-map-marker-al"></i><p>
+                            <%= item.email %>
+                        </p></li>
+                        </a>
                     </ul>
                     <hr />
                     <ul class="list--inline site-footer__social-icons social-icons">
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Facebook"><i class="icon icon-facebook"></i></a></li>
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Twitter"><i class="icon icon-twitter"></i> <span class="icon__fallback-text">Twitter</span></a></li>
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Pinterest"><i class="icon icon-pinterest"></i> <span class="icon__fallback-text">Pinterest</span></a></li>
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Instagram"><i class="icon icon-instagram"></i> <span class="icon__fallback-text">Instagram</span></a></li>
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Tumblr"><i class="icon icon-tumblr-alt"></i> <span class="icon__fallback-text">Tumblr</span></a></li>
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on YouTube"><i class="icon icon-youtube"></i> <span class="icon__fallback-text">YouTube</span></a></li>
-                        <li><a class="social-icons__link" href="#" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Vimeo"><i class="icon icon-vimeo-alt"></i> <span class="icon__fallback-text">Vimeo</span></a></li>
+                        <li><a class="social-icons__link" href="<%= item.linkfacebook %>" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on Facebook"><i class="icon icon-facebook"></i></a></li>
+                        <li><a class="social-icons__link" href="<%= item.linkyoutube %>" target="_blank" title="Belle Multipurpose Bootstrap 4 Template on YouTube"><i class="icon icon-youtube"></i> <span class="icon__fallback-text">YouTube</span></a></li>
                     </ul>
                 </div>
             </div>
