--- a/app/vviews/ecommerce/pages/listProduct/index.ejs
+++ b/app/vviews/ecommerce/pages/listProduct/index.ejs
@@ -10,10 +10,10 @@
                 <div class="sidebar_tags">
                     <!--Categories-->
                     <div class="sidebar_widget categories filter-widget">
-                        <div class="widget-title"><h2>Categories</h2></div>
+                        <div class="widget-title"><h2>Danh Mục</h2></div>
                         <div class="widget-content">
                             <ul class="sidebar_categories">
-                                <li class="level1 sub-level"><a href="#;" class="site-nav">Clothing</a>
+                                <!-- <li class="level1 sub-level"><a href="#;" class="site-nav">Clothing</a>
                                     <ul class="sublinks">
                                         <li class="level2"><a href="#;" class="site-nav">Men</a></li>
                                         <li class="level2"><a href="#;" class="site-nav">Women</a></li>
@@ -28,12 +28,12 @@
                                         <li class="level2"><a href="#;" class="site-nav">Eaarings</a></li>
                                         <li class="level2"><a href="#;" class="site-nav">View All Jewellery</a></li>
                                     </ul>
-                                </li>
-                                <li class="lvl-1"><a href="#;" class="site-nav">Shoes</a></li>
-                                <li class="lvl-1"><a href="#;" class="site-nav">Accessories</a></li>
-                                <li class="lvl-1"><a href="#;" class="site-nav">Collections</a></li>
-                                <li class="lvl-1"><a href="#;" class="site-nav">Sale</a></li>
-                                <li class="lvl-1"><a href="#;" class="site-nav">Page</a></li>
+                                </li> -->
+                                <% listCategory.slice(0,6).forEach((category)=> { %>
+                                    <li class="lvl-1"><a href="<%= category.slug %>" class="site-nav"><%= category.name %></a></li>
+                                <%})%>
+                                <!-- <li class="lvl-1"><a href="#;" class="site-nav">Shoes</a></li> -->
+
                             </ul>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                     <!--Price Filter-->
                     <div class="sidebar_widget filterBox filter-widget">
                         <div class="widget-title">
-                            <h2>Price</h2>
+                            <h2>Giá</h2>
                         </div>
                         <form action="#" method="post" class="price-filter">
                             <div id="slider-range" class="ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all">
@@ -54,7 +54,7 @@
                                     <p class="no-margin"><input id="amount" type="text"></p>
                                 </div>
                                 <div class="col-6 text-right margin-25px-top">
-                                    <button class="btn btn-secondary btn--small">filter</button>
+                                    <button class="btn btn-secondary btn--small">Lọc</button>
                                 </div>
                             </div>
                         </form>
@@ -62,7 +62,7 @@
                     <!--End Price Filter-->
                     <!--Size Swatches-->
                     <div class="sidebar_widget filterBox filter-widget size-swacthes">
-                        <div class="widget-title"><h2>Size</h2></div>
+                        <div class="widget-title"><h2>Kích Cỡ</h2></div>
                         <div class="filter-color swacth-list">
                             <ul>
                                 <li><span class="swacth-btn checked">X</span></li>
@@ -80,7 +80,7 @@
                     <!--End Size Swatches-->
                     <!--Color Swatches-->
                     <div class="sidebar_widget filterBox filter-widget">
-                        <div class="widget-title"><h2>Color</h2></div>
+                        <div class="widget-title"><h2>Màu Sắc</h2></div>
                         <div class="filter-color swacth-list clearfix">
                             <span class="swacth-btn black"></span>
                             <span class="swacth-btn white checked"></span>
@@ -102,7 +102,7 @@
                     </div>
                     <!--End Color Swatches-->
                     <!--Brand-->
-                    <div class="sidebar_widget filterBox filter-widget">
+                    <!-- <div class="sidebar_widget filterBox filter-widget">
                         <div class="widget-title"><h2>Brands</h2></div>
                         <ul>
                             <li>
@@ -126,7 +126,7 @@
                               <label for="check6"><span><span></span></span>Monark</label>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                     <!--End Brand-->
                     <!--Popular Products-->
                     <div class="sidebar_widget">
@@ -176,18 +176,18 @@
                     </div>
                     <!--End Popular Products-->
                     <!--Banner-->
-                    <div class="sidebar_widget static-banner">
+                    <!-- <div class="sidebar_widget static-banner">
                         <img src="/frontend/assets/images/side-banner-2.jpg" alt="" />
-                    </div>
+                    </div> -->
                     <!--Banner-->
                     <!--Information-->
-                    <div class="sidebar_widget">
+                    <!-- <div class="sidebar_widget">
                         <div class="widget-title"><h2>Information</h2></div>
                         <div class="widget-content"><p>Use this text to share information about your brand with your customers. Describe a product, share announcements, or welcome customers to your store.</p></div>
-                    </div>
+                    </div> -->
                     <!--end Information-->
                     <!--Product Tags-->
-                    <div class="sidebar_widget">
+                    <!-- <div class="sidebar_widget">
                       <div class="widget-title">
                         <h2>Product Tags</h2>
                       </div>
@@ -222,18 +222,18 @@
                           <li><a href="#" title="Show products matching tag Oxymat">Oxymat</a></li>
                         </ul>
                         <span class="btn btn--small btnview">View all</span> </div>
-                    </div>
+                    </div> -->
                     <!--end Product Tags-->
                 </div>
             </div>
             <!--End Sidebar-->
             <!--Main Content-->
             <div class="col-12 col-sm-12 col-md-9 col-lg-9 main-col">
-                <div class="category-description">
+                <!-- <div class="category-description">
                     <h3>Category Description</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing.</p>
                     <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
-                </div>
+                </div> -->
                 <hr>
                 <div class="productList">
                     <!--Toolbar-->
@@ -241,7 +241,7 @@
                     <div class="toolbar">
                         <div class="filters-toolbar-wrapper">
                             <div class="row">
-                                <div class="col-4 col-md-4 col-lg-4 filters-toolbar__item collection-view-as d-flex justify-content-start align-items-center">
+                                <!-- <div class="col-4 col-md-4 col-lg-4 filters-toolbar__item collection-view-as d-flex justify-content-start align-items-center">
                                     <a href="shop-left-sidebar.html" title="Grid View" class="change-view change-view--active">
                                         <img src="/frontend/assets/images/grid.jpg" alt="Grid" />
                                     </a>
@@ -250,20 +250,20 @@
                                     </a>
                                 </div>
                                 <div class="col-4 col-md-4 col-lg-4 text-center filters-toolbar__item filters-toolbar__item--count d-flex justify-content-center align-items-center">
-                                    <span class="filters-toolbar__product-count">Showing: 22</span>
-                                </div>
-                                <div class="col-4 col-md-4 col-lg-4 text-right">
+                                    <span class="filters-toolbar__product-count">Đang Hiển Thị: 22</span>
+                                </div> -->
+                                <div class="col-4 col-md-4 col-lg-4 text-left">
                                     <div class="filters-toolbar__item">
-                                          <label for="SortBy" class="hidden">Sort</label>
+                                          <label for="SortBy" class="hidden">Lọc</label>
                                           <select name="SortBy" id="SortBy" class="filters-toolbar__input filters-toolbar__input--sort">
-                                            <option value="title-ascending" selected="selected">Sort</option>
-                                            <option>Best Selling</option>
-                                            <option>Alphabetically, A-Z</option>
-                                            <option>Alphabetically, Z-A</option>
-                                            <option>Price, low to high</option>
-                                            <option>Price, high to low</option>
-                                            <option>Date, new to old</option>
-                                            <option>Date, old to new</option>
+                                            <option value="title-ascending" selected="selected">Lọc</option>
+                                            <!-- <option>Best Selling</option> -->
+                                            <option>Theo Thứ Tự, A-Z</option>
+                                            <option>Theo Thứ Tự, Z-A</option>
+                                            <option>Giá, Thấp Đến Cao</option>
+                                            <option>Giá, Cao Đến Thấp</option>
+                                            <option>Ngày, Mới Tới Cũ</option>
+                                            <option>Ngày, Cũ Tới Mới</option>
                                           </select>
                                           <input class="collection-header__default-sort" type="hidden" value="manual">
                                     </div>
