--- a/app/vviews/admin/html/head.ejs
+++ b/app/vviews/admin/html/head.ejs
@@ -1,7 +1,10 @@
 <base href="/">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Dashboard</title>
+<title>Trang Quản Trị</title>
+
+<link rel="shortcut icon" href="/frontend/assets/images/favicon.png" />
+
 <!-- Tell the browser to be responsive to screen width -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Font Awesome -->
