--- a/app/vviews/admin/html/navbar.ejs
+++ b/app/vviews/admin/html/navbar.ejs
@@ -22,8 +22,8 @@
                 </li>
                 <!-- Menu Footer-->
                 <li class="user-footer">
-                    <a href="#" class="btn btn-default btn-flat">Profile</a>
-                    <a href="#" class="btn btn-default btn-flat float-right">Sign out</a>
+                    <a href="#" class="btn btn-default btn-flat">Tài Khoản</a>
+                    <a href="#" class="btn btn-default btn-flat float-right">Đăng Xuất</a>
                 </li>
             </ul>
         </li>
