--- a/app/vviews/admin/html/sidebar.ejs
+++ b/app/vviews/admin/html/sidebar.ejs
@@ -1,15 +1,15 @@
 <%  
     let arrMenu = [
-        {name: 'Dashboard', icon: 'fa-tachometer-alt', link: `${systemConfig.prefixAdmin}/dashboard`},
-        {name: 'Products', icon: 'fas fa-shopping-cart', link: `${systemConfig.prefixAdmin}/products`},
-        {name: 'Categories', icon: 'fa-window-restore', link: `${systemConfig.prefixAdmin}/categories`},
-        {name: 'Attributes', icon: 'fas fa-tags', link: `${systemConfig.prefixAdmin}/attributes`},
-        {name: 'Blog', icon: 'fa-newspaper', link: `${systemConfig.prefixAdmin}/articles`},
+        {name: 'Bảng Điều Khiển', icon: 'fa-tachometer-alt', link: `${systemConfig.prefixAdmin}/dashboard`},
+        {name: 'Sản Phẩm', icon: 'fas fa-shopping-cart', link: `${systemConfig.prefixAdmin}/products`},
+        {name: 'Danh Mục', icon: 'fa-window-restore', link: `${systemConfig.prefixAdmin}/categories`},
+        {name: 'Thuộc Tính', icon: 'fas fa-tags', link: `${systemConfig.prefixAdmin}/attributes`},
+        {name: 'Bài Viết', icon: 'fa-newspaper', link: `${systemConfig.prefixAdmin}/articles`},
         {name: 'Sliders', icon: 'fa-images', link: `${systemConfig.prefixAdmin}/sliders`},
         {name: 'Menu', icon: 'fas fa-bars', link: `${systemConfig.prefixAdmin}/menu`},
         // {name: 'Rss', icon: 'fas fa-rss', link: `${systemConfig.prefixAdmin}/rss`},
-        {name: 'Settings', icon: 'fas fa-cog', link: `${systemConfig.prefixAdmin}/settings`},
-        {name: 'Users', icon: 'fa-user', link: `${systemConfig.prefixAdmin}/users`},
+        {name: 'Cài Đặt', icon: 'fas fa-cog', link: `${systemConfig.prefixAdmin}/settings`},
+        {name: 'Tài Khoản', icon: 'fa-user', link: `${systemConfig.prefixAdmin}/users`},
     ];
 
     let xhtmlMenu = '';
