--- a/app/vviews/ecommerce/pages/login/index.ejs
+++ b/app/vviews/ecommerce/pages/login/index.ejs
@@ -28,7 +28,7 @@
                       </div>
                       <div class="row">
                         <div class="text-center col-12 col-sm-12 col-md-12 col-lg-12">
-                            <input type="submit" class="btn mb-3" value="Sign In">
+                            <input type="submit" class="btn mb-3" value="Đăng Nhập">
                             <p class="mb-4">
                                 <a href="#" id="RecoverPassword">Quên Mật Khẩu?</a> &nbsp; | &nbsp;
                                 <a href="/dang-ky" id="customer_register_link">Tạo Tài Khoản</a>
